--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.3",
-    "cordova-android": "^7.0.0",
+    "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-googleplus": "^5.2.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.6.1",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -51,7 +51,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-googleplus": {}
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1044703059985-m5brddie0i17s5vd5fei8tjubdv5oltq",
+        "WEB_APPLICATION_CLIENT_ID": "1044703059985-m5brddie0i17s5vd5fei8tjubdv5oltq.apps.googleusercontent.com"
+      }
     },
     "platforms": [
       "android",
