--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
+    "adb": "0.2.0",
     "angularfire2": "^5.0.0-rc.3",
     "cordova-android": "7.0.0",
-    "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-googleplus": "^5.2.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.6.1",
     "ionic-angular": "3.8.0",
@@ -49,7 +48,6 @@
       "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1044703059985-m5brddie0i17s5vd5fei8tjubdv5oltq",
@@ -57,8 +55,7 @@
       }
     },
     "platforms": [
-      "android",
-      "browser"
+      "android"
     ]
   }
 }
