--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,10 @@
 {
   "hosting": {
-    "public": "www",
-    "headers": [ {
-      "source" : "**/*.@(jpg|jpeg|gif|png|js|webp|css)",
-      "headers" : [ {
-        "key" : "Cache-Control",
-        "value" : "max-age=604800"
-      } ]
-    }, {
-      // Sets the cache header for 404 pages to cache for 5 minutes
-      "source" : "404.html",
-      "headers" : [ {
-        "key" : "Cache-Control",
-        "value" : "max-age=2592000"
-      } ]
-    } ]
+    "public": "platforms/browser/www/",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
