--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "@ionic/storage": "2.0.1",
     "adb": "0.2.0",
     "angular4-social-login": "^1.1.1",
-    "angularfire2": "^5.0.0-rc.3",
-    "cordova-android": "7.0.0",
+    "angularfire2": "^5.0.0-rc.6",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-googleplus": "^5.2.1",
+    "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "^4.6.1",
+    "firebase": "^4.12.0",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "promise-polyfill": "^7.1.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -52,12 +52,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1044703059985-m5brddie0i17s5vd5fei8tjubdv5oltq",
-        "WEB_APPLICATION_CLIENT_ID": "1044703059985-m5brddie0i17s5vd5fei8tjubdv5oltq.apps.googleusercontent.com"
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.400999211901-p8ifa7tc79i7mcok8hdpd1ejcb5s1ek0",
+        "WEB_APPLICATION_CLIENT_ID": "400999211901-p8ifa7tc79i7mcok8hdpd1ejcb5s1ek0.apps.googleusercontent.com"
       }
     },
     "platforms": [
-      "android",
       "browser"
     ]
   }
