--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^4.12.0",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic2-google-places-autocomplete": "^1.0.2",
     "ionicons": "3.0.0",
     "moment": "^2.21.0",
     "promise-polyfill": "^7.1.0",
