--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/google-plus": "^4.5.3",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "2.1.3",
     "adb": "0.2.0",
     "angular2-moment": "^1.8.0",
     "angular4-social-login": "^1.1.1",
@@ -31,22 +31,24 @@
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.12.0",
-    "ionic-angular": "3.8.0",
+    "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic2-auto-complete": "^1.6.2-alpha",
     "ionic2-google-places-autocomplete": "^1.0.2",
     "ionicons": "3.0.0",
     "moment": "^2.21.0",
+    "moment-timezone": "^0.5.16",
     "promise-polyfill": "^7.1.0",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
-    "typescript": "2.3.4"
+    "@ionic/app-scripts": "3.1.7",
+    "typescript": "~2.4.2"
   },
   "description": "demo104: An Ionic project",
   "cordova": {
