--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.3.2",
+    "@ionic-native/core": "^4.3.2",
+    "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/google-plus": "^4.5.3",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
     "adb": "0.2.0",
     "angular2-moment": "^1.8.0",
-    "angular4-social-login": "^1.1.1",
     "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
@@ -36,8 +36,6 @@
     "firebase": "^4.12.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionic2-auto-complete": "^1.6.2-alpha",
-    "ionic2-google-places-autocomplete": "^1.0.2",
     "ionicons": "3.0.0",
     "moment": "^2.21.0",
     "moment-timezone": "^0.5.16",
