--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.0.3",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
-    "@angular/core": "5.0.3",
-    "@angular/forms": "5.0.3",
-    "@angular/http": "5.0.3",
-    "@angular/platform-browser": "5.0.3",
-    "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "^4.3.2",
+    "@angular/animations": "5.2.9",
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/compiler-cli": "5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/core": "4.6.0",
     "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/google-plus": "^4.5.3",
-    "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
     "adb": "0.2.0",
     "angular2-moment": "^1.8.0",
     "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
-    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
-    "cordova-plugin-ionic-webview": "^1.2.0",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.12.0",
     "ionic-angular": "3.9.2",
@@ -40,13 +41,13 @@
     "moment": "^2.21.0",
     "moment-timezone": "^0.5.16",
     "promise-polyfill": "^7.1.0",
-    "rxjs": "5.5.2",
+    "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.7",
-    "typescript": "~2.4.2"
+    "@ionic/app-scripts": "3.1.8",
+    "typescript": "~2.6.2"
   },
   "description": "demo104: An Ionic project",
   "cordova": {
@@ -56,9 +57,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.400999211901-p8ifa7tc79i7mcok8hdpd1ejcb5s1ek0",
-        "WEB_APPLICATION_CLIENT_ID": "400999211901-p8ifa7tc79i7mcok8hdpd1ejcb5s1ek0.apps.googleusercontent.com"
-      }
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.118760255717-b6f012ri2n40nnsffur0lggogglfan6t",
+        "WEB_APPLICATION_CLIENT_ID": "118760255717-b6f012ri2n40nnsffur0lggogglfan6t.apps.googleusercontent.com"
+      },
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android",
