--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "adb": "0.2.0",
     "angular2-moment": "^1.8.0",
     "angularfire2": "^5.0.0-rc.6",
+    "bowser": "1.9.3",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
